исправлена панель администрирования карточек